Modification du titre html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
-        <title>test</title>
+        <title>Super Site</title>
     </head>
     <body>    
 		<h1>Mon super site</h1>        
